ui-multiselect labels : css nowrap defined to prevent breaking layout

--- a/src/themes/default/theme.css
+++ b/src/themes/default/theme.css
@@ -184,6 +184,10 @@ body .ui-widget.ui-tooltip {
 	min-width			 : 213px;
 }
 
+.ampere.module button {
+	white-space: nowrap;
+}
+
 .ampere.module input[type=number] {
 	min-width			 : 220px;
 }
